SQL Server DbContext added

--- a/UserProfileManagementAPI/appsettings.json
+++ b/UserProfileManagementAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ConnectionString": "Enter SQL Server connection string"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
